# webnovel

./: .gitignore  docker-compose.yml  pyproject.toml  pytest.ini
src/: .env.template  alembic.ini  db_role_init.py  enums.py  main.py
src/api/: __init__.py  utils.py
src/api/crud/: sqlalchemy_novel.py  sqlalchemy_role.py  sqlalchemy_user.py  sqlalchemy_user_session.py
src/api/schemas/: tokens.py  user.py  usernovelrole.py
src/api/services/: authentication.py  novel.py  role.py  users.py
src/api/v1/: __init__.py  enums.py  utils.py
src/api/v1/crud/: sqlalchemy_novel.py  sqlalchemy_permission.py  sqlalchemy_role.py  sqlalchemy_user.py  sqlalchemy_user_session.py  sqlalchemy_usernovelrole.py
src/api/v1/schemas/: novel.py  user_session.py
src/api/v1/services/: authentication.py  authorization.py  novel.py  role.py  users.py
src/api/v1/views/: auth.py  novel.py  user.py
src/api/views/: auth.py  novel.py  user.py
src/core/: config.py
src/core/database/alembic/: env.py
src/core/database/alembic/versions/: 2025_07_02_1235-337ed36b9c0e_create_all_tables.py  2025_07_03_1316-662a81084fa2_create_permissions_role_permissions_.py
src/core/database/models/: __init__.py  db_helper.py  novel.py  permission.py  role.py  role_permission_associative.py  user.py  user_session.py  usernovelrole.py
src/security/: jwt.py
tests/: conftest.py  docker-compose.yml  factories.py
tests/integration/: test_crud_novel.py
tests/unit/: test_auth_service.py  test_role_service.py
